updated docs after processing refactor

--- a/tutorials/Diebold_Mariano_Test_Statistic.ipynb
+++ b/tutorials/Diebold_Mariano_Test_Statistic.ipynb
@@ -94,11 +94,13 @@
     "# Create observations for 100 dates\n",
     "obs = 10 * np.random.random((100, 100))\n",
     "obs = xr.DataArray(\n",
-    "    data=obs, dims=[\"time\", \"x\"], coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-04-10\"), \"x\": np.arange(0, 100)}\n",
+    "    data=obs, \n",
+    "    dims=[\"time\", \"x\"],\n",
+    "    coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-04-10\"), \"x\": np.arange(0, 100)}\n",
     ")\n",
     "\n",
     "# Create forecasts for 7 lead days\n",
-    "fcst = xr.DataArray(data=[1] * 7, dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})\n",
+    "fcst = xr.DataArray(data=[1]*7, dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})\n",
     "fcst = fcst * obs\n",
     "\n",
     "# Create two synthetic forecasts that are based on the observations + noise\n",
