--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -39,7 +39,6 @@
     "\n",
     "## Continuous\n",
     "- [Flip Flop](./Flip_Flop_Index.ipynb)\n",
-    "- [Isotonic Regression](./Isotonic_Regression.ipynb)\n",
     "- [MAE](./Mean_Absolute_Error.ipynb) / [RMSE](./Root_Mean_Squared_Error.ipynb) / [MSE](./Mean_Squared_Error.ipynb)\n",
     "- [Murphy Diagrams](./Murphy_Diagrams.ipynb)\n",
     "- [Pearson's Correlation](./Pearsons_Correlation.ipynb)\n",
@@ -91,6 +90,15 @@
     "\n",
     "## Stats\n",
     "- [Diebold Mariano](./Diebold_Mariano_Test_Statistic.ipynb)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e8c0be0",
+   "metadata": {},
+   "source": [
+    "## Processing\n",
+    "- [Isotonic Regression](./Isotonic_Regression.ipynb)"
    ]
   },
   {
