--- a/tutorials/First_Data_Fetching.ipynb
+++ b/tutorials/First_Data_Fetching.ipynb
@@ -29,13 +29,13 @@
    },
    "outputs": [],
    "source": [
-    "import hashlib  # Used to check the downloaded file is what is expected\n",
+    "import hashlib     # Used to check the downloaded file is what is expected\n",
     "import matplotlib  # Used to improve plot outputs\n",
-    "import numpy  # Used if generating synthetic data\n",
-    "import os  # Used to check if files are already downloaded\n",
-    "import pandas  # Used if generating synthetic data\n",
-    "import requests  # Used to retrieve files\n",
-    "import xarray  # Used for opening and inspecting the data"
+    "import numpy       # Used if generating synthetic data\n",
+    "import os          # Used to check if files are already downloaded\n",
+    "import pandas      # Used if generating synthetic data\n",
+    "import requests    # Used to retrieve files\n",
+    "import xarray      # Used for opening and inspecting the data"
    ]
   },
   {
@@ -63,34 +63,31 @@
     "# This is a basic file fetch only. Do not rely on it for untrusted data. A basic check has been included to make sure the\n",
     "# downloaded file matches what was expected.\n",
     "\n",
-    "\n",
     "# tweak chunk_size if fetch is taking time\n",
     "def basic_fetch(url, filename, expected_hash, *, chunk_size=8192):\n",
     "    if os.path.exists(filename):\n",
     "        print(\"File already exists, skipping download\")\n",
-    "    else:\n",
+    "    else:    \n",
     "        digest = hashlib.sha256()\n",
     "        with requests.get(url, stream=True) as r:\n",
     "            r.raise_for_status()\n",
     "            total_size = int(r.headers.get(\"content-length\", 0))\n",
     "            downloaded = 0\n",
     "            print(f\"downloading {url} -> {filename}\\n(size={total_size} bytes), please wait a moment...\")\n",
-    "            with open(filename, \"wb\") as f:\n",
+    "            with open(filename, 'wb') as f:\n",
     "                for chunk in r.iter_content(chunk_size):\n",
     "                    f.write(chunk)\n",
     "                    # update digest on the fly\n",
     "                    digest.update(chunk)\n",
     "                    downloaded += len(chunk)\n",
     "        print(\"Download complete, checking digest...\")\n",
-    "\n",
+    "                    \n",
     "        # check sha256 hash\n",
     "        found_hash = digest.hexdigest()\n",
-    "        print(f\"Hash validation: \\n-> expected | {expected_hash}\\n-> found    | {found_hash}\")\n",
+    "        print(f\"Hash validation: \\n-> expected | {expected_hash}\\n-> found    | {found_hash}\") \n",
     "        if found_hash != expected_hash:\n",
     "            os.remove(filename)\n",
-    "            print(\n",
-    "                \"File has unexpected contents. The file has been removed - please download manually and check the data carefully\"\n",
-    "            )\n",
+    "            print(\"File has unexpected contents. The file has been removed - please download manually and check the data carefully\")\n",
     "        print(\"Done.\")"
    ]
   },
@@ -103,14 +100,10 @@
    },
    "outputs": [],
    "source": [
-    "forecast_url = (\n",
-    "    \"https://dapds00.nci.org.au/thredds/fileServer/wr45/ops_aps3/access-g/1/20221120/0000/fc/sfc/temp_scrn.nc\"\n",
-    ")\n",
-    "forecast_hash = \"7956d95ea3a7edee2a01c989b1f9e089199da5b1924b4c2d4611088713fbcb44\"  # Recorded on 13/5/2023\n",
-    "analysis_url = (\n",
-    "    \"https://dapds00.nci.org.au/thredds/fileServer/wr45/ops_aps3/access-g/1/20221124/0000/an/sfc/temp_scrn.nc\"\n",
-    ")\n",
-    "analysis_hash = \"163c5de55e721ad2a76518242120044bedfec805e3397cfb0008435521630042\"  # Recorded on 13/5/2023"
+    "forecast_url = 'https://dapds00.nci.org.au/thredds/fileServer/wr45/ops_aps3/access-g/1/20221120/0000/fc/sfc/temp_scrn.nc'\n",
+    "forecast_hash = '7956d95ea3a7edee2a01c989b1f9e089199da5b1924b4c2d4611088713fbcb44'  # Recorded on 13/5/2023\n",
+    "analysis_url = 'https://dapds00.nci.org.au/thredds/fileServer/wr45/ops_aps3/access-g/1/20221124/0000/an/sfc/temp_scrn.nc'\n",
+    "analysis_hash = '163c5de55e721ad2a76518242120044bedfec805e3397cfb0008435521630042'  # Recorded on 13/5/2023"
    ]
   },
   {
@@ -132,7 +125,7 @@
    ],
    "source": [
     "%%time\n",
-    "basic_fetch(forecast_url, \"forecast_grid.nc\", forecast_hash)"
+    "basic_fetch(forecast_url, 'forecast_grid.nc', forecast_hash)"
    ]
   },
   {
@@ -154,7 +147,7 @@
    ],
    "source": [
     "%%time\n",
-    "basic_fetch(analysis_url, \"analysis_grid.nc\", analysis_hash)"
+    "basic_fetch(analysis_url, 'analysis_grid.nc', analysis_hash)"
    ]
   },
   {
@@ -601,7 +594,7 @@
     }
    ],
    "source": [
-    "forecast = xarray.open_dataset(\"forecast_grid.nc\")\n",
+    "forecast = xarray.open_dataset('forecast_grid.nc')\n",
     "forecast.temp_scrn"
    ]
   },
@@ -1093,7 +1086,7 @@
     }
    ],
    "source": [
-    "analysis = xarray.open_dataset(\"analysis_grid.nc\")\n",
+    "analysis = xarray.open_dataset('analysis_grid.nc')\n",
     "analysis.temp_scrn"
    ]
   },
@@ -1187,8 +1180,10 @@
     "lat = numpy.linspace(-90, 90, 1536)\n",
     "lon = numpy.linspace(0, 360, 2048)\n",
     "slow_decrease = numpy.linspace(26, 18, 240)\n",
-    "time_series = pandas.date_range(start=\"2022-11-20T01:00:00.000000000\", end=\"2022-11-30T00:00:00.000000000\", periods=240)\n",
-    "analysis_time = [time_series[24 * 4 - 1].to_pydatetime()]  # November 24th at midnight"
+    "time_series = pandas.date_range(start='2022-11-20T01:00:00.000000000',\n",
+    "                        end='2022-11-30T00:00:00.000000000',\n",
+    "                        periods=240)\n",
+    "analysis_time = [time_series[24*4-1].to_pydatetime()]  # November 24th at midnight"
    ]
   },
   {
@@ -1202,7 +1197,7 @@
    "source": [
     "# We will use random noise to provide some variation to the data\n",
     "random_number_generator = numpy.random.default_rng(seed=42)\n",
-    "random = random_number_generator.random((1, 1536, 2048))"
+    "random = random_number_generator.random((1, 1536, 2048)) "
    ]
   },
   {
@@ -1225,7 +1220,7 @@
    "source": [
     "%%time\n",
     "# The analysis step is around 24 degrees, plus some random noise. Ideally this would include some more structure.\n",
-    "analysis_values = random + 24\n",
+    "analysis_values = random + 24  \n",
     "\n",
     "# The forecast contains a slowly decreasing trend on average which will give us some difference for comparison\n",
     "forecast_values = numpy.array([random[0] + trend for trend in slow_decrease])"
@@ -1663,16 +1658,9 @@
     }
    ],
    "source": [
-    "analysis_array = xarray.DataArray(\n",
-    "    coords={\n",
-    "        \"time\": analysis_time,\n",
-    "        \"lat\": lat,\n",
-    "        \"lon\": lon,\n",
-    "    },\n",
-    "    data=analysis_values,\n",
-    ")\n",
-    "analysis = xarray.Dataset(data_vars={\"temp_scrn\": analysis_array})\n",
-    "analysis.to_netcdf(\"analysis_grid.nc\")\n",
+    "analysis_array = xarray.DataArray(coords={'time': analysis_time, 'lat': lat, 'lon': lon, }, data=analysis_values)\n",
+    "analysis = xarray.Dataset(data_vars={'temp_scrn': analysis_array})\n",
+    "analysis.to_netcdf('analysis_grid.nc')\n",
     "analysis"
    ]
   },
@@ -2183,16 +2171,9 @@
     }
    ],
    "source": [
-    "forecast_array = xarray.DataArray(\n",
-    "    coords={\n",
-    "        \"time\": time_series,\n",
-    "        \"lat\": lat,\n",
-    "        \"lon\": lon,\n",
-    "    },\n",
-    "    data=forecast_values,\n",
-    ")\n",
-    "forecast = xarray.Dataset(data_vars={\"temp_scrn\": forecast_array})\n",
-    "forecast.to_netcdf(\"forecast_grid.nc\")\n",
+    "forecast_array = xarray.DataArray(coords={'time': time_series, 'lat': lat, 'lon': lon, }, data=forecast_values)\n",
+    "forecast = xarray.Dataset(data_vars={'temp_scrn': forecast_array})\n",
+    "forecast.to_netcdf('forecast_grid.nc')\n",
     "forecast"
    ]
   },
@@ -3004,8 +2985,8 @@
     }
    ],
    "source": [
-    "forecast.temp_scrn[24 * 4 - 1].plot(cmap=matplotlib.pyplot.cm.Blues, vmin=22, vmax=27)\n",
-    "forecast.temp_scrn[24 * 4 - 1].mean()"
+    "forecast.temp_scrn[24*4-1].plot(cmap=matplotlib.pyplot.cm.Blues, vmin=22, vmax=27)\n",
+    "forecast.temp_scrn[24*4-1].mean()"
    ]
   },
   {
