--- a/tutorials/Flip_Flop_Index.ipynb
+++ b/tutorials/Flip_Flop_Index.ipynb
@@ -85,8 +85,8 @@
     "# Create two synthetic forecast revision series.\n",
     "# These might represent a forecast of 28 degrees a week in advance of the event, updated daily with a forecast of 21 degrees the day before the event.\n",
     "# Inspection (and the graph below) shows that the unstable_fcst jumps around while the stable_fcst has a cooler trend each day.\n",
-    "unstable_fcst = xr.DataArray(data=[21.0, 23, 18, 20, 26, 25, 28], dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})\n",
-    "stable_fcst = xr.DataArray(data=[21.0, 23, 23, 24, 25, 26, 28], dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})"
+    "unstable_fcst = xr.DataArray(data=[21., 23, 18, 20, 26, 25, 28], dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})\n",
+    "stable_fcst = xr.DataArray(data=[21., 23, 23, 24, 25, 26, 28], dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})"
    ]
   },
   {
@@ -1086,10 +1086,8 @@
    ],
    "source": [
     "fig = px.scatter()\n",
-    "fig.add_scatter(x=unstable_fcst[\"lead_day\"], y=unstable_fcst, mode=\"lines\", name=\"unstable forecast\")\n",
-    "fig.add_scatter(x=unstable_fcst[\"lead_day\"], y=stable_fcst, mode=\"lines\", name=\"stable forecast\").update_layout(\n",
-    "    xaxis_title=\"Lead Day\", yaxis_title=\"T (C)\"\n",
-    ")\n",
+    "fig.add_scatter(x=unstable_fcst['lead_day'], y=unstable_fcst, mode=\"lines\", name=\"unstable forecast\")\n",
+    "fig.add_scatter(x=unstable_fcst['lead_day'], y=stable_fcst, mode=\"lines\", name=\"stable forecast\").update_layout(xaxis_title=\"Lead Day\", yaxis_title=\"T (C)\")\n",
     "fig.show()"
    ]
   },
@@ -1893,7 +1891,7 @@
    },
    "outputs": [],
    "source": [
-    "# Working with real data requires several forecast issuances, which is a very large amount of gridded data.\n",
+    "# Working with real data requires several forecast issuances, which is a very large amount of gridded data. \n",
     "# We choose to work with synthetic data to keep this example tightly focused.\n",
     "# We will start with synthetic observations and add perturbations to create synthetic forecasts.\n",
     "\n",
@@ -1901,15 +1899,15 @@
     "# The values of the observations are between 0 and 40.\n",
     "obs = 40 * np.random.random((100, 100))\n",
     "obs = xr.DataArray(\n",
-    "    data=obs,\n",
+    "    data=obs, \n",
     "    dims=[\"time\", \"location number\"],\n",
-    "    coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-04-10\"), \"location number\": np.arange(0, 100)},\n",
+    "    coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-04-10\"), \"location number\": np.arange(0, 100)}\n",
     ")\n",
     "\n",
     "# Create forecasts for 7 lead days\n",
     "# Each observation has 7 forecast values, issued between 1 and 7 days in advance.\n",
     "# We create two such forecasts, initially matching the observations, then adding some noise to simulate a forecast\n",
-    "fcst1 = xr.DataArray(data=[1] * 7, dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})\n",
+    "fcst1 = xr.DataArray(data=[1]*7, dims=\"lead_day\", coords={\"lead_day\": np.arange(1, 8)})\n",
     "fcst1 = fcst1 * obs\n",
     "fcst2 = fcst1.copy()\n",
     "\n",
@@ -1923,10 +1921,10 @@
     "noise_for_fcst1 = noise.copy()\n",
     "noise_for_fcst2 = noise.copy()\n",
     "for lead_day in np.arange(1, 7):\n",
-    "    next_lead_day_noise = (1 + lead_day / 7) * skewnorm.rvs(4, size=(1, 100, 100))\n",
+    "    next_lead_day_noise = (1+lead_day/7)*skewnorm.rvs(4, size=(1, 100, 100))\n",
     "    noise_for_fcst1 = np.concatenate((noise_for_fcst1, next_lead_day_noise))\n",
     "    if lead_day % 2 == 0:\n",
-    "        noise_for_fcst2 = np.concatenate((noise_for_fcst2, -1 * next_lead_day_noise))\n",
+    "        noise_for_fcst2 = np.concatenate((noise_for_fcst2, -1*next_lead_day_noise))\n",
     "    else:\n",
     "        noise_for_fcst2 = np.concatenate((noise_for_fcst2, next_lead_day_noise))\n",
     "\n",
@@ -3300,10 +3298,10 @@
     "# Many of the fcst2 revision sequences have a Flip-Flop index exceeding 2 but barely any of fcst1.\n",
     "flip_flop_index_proportion_exceeding(fcst1, \"lead_day\", np.arange(0.1, 5, 0.1)).plot()\n",
     "flip_flop_index_proportion_exceeding(fcst2, \"lead_day\", np.arange(0.1, 5, 0.1)).plot()\n",
-    "plt.legend([\"fcst1\", \"fcst2\"])\n",
+    "plt.legend(['fcst1', 'fcst2'])\n",
     "plt.xlabel(\"Flip-Flop Index\")\n",
     "plt.ylabel(\"Proportion exceeding\")\n",
-    "plt.title(\"Lead Days 1-2-3-4-5-6-7\")"
+    "plt.title('Lead Days 1-2-3-4-5-6-7')"
    ]
   },
   {
@@ -3338,10 +3336,10 @@
     "# We see here that the shorter lead-day forecasts Flip-Flop slightly less than the longer range forecasts.\n",
     "flip_flop_index_proportion_exceeding(fcst1, \"lead_day\", np.arange(0.1, 4, 0.1), days123=[1, 2, 3]).days123.plot()\n",
     "flip_flop_index_proportion_exceeding(fcst1, \"lead_day\", np.arange(0.1, 4, 0.1), days456=[4, 5, 6]).days456.plot()\n",
-    "plt.legend([\"lead-days 1, 2, 3\", \"lead-days 4, 5, 6\"])\n",
+    "plt.legend(['lead-days 1, 2, 3', 'lead-days 4, 5, 6'])\n",
     "plt.xlabel(\"Flip-Flop Index\")\n",
     "plt.ylabel(\"Proportion exceeding\")\n",
-    "plt.title(\"fcst1\")"
+    "plt.title('fcst1')"
    ]
   },
   {
