--- a/tutorials/Mean_Absolute_Error.ipynb
+++ b/tutorials/Mean_Absolute_Error.ipynb
@@ -66,8 +66,8 @@
    "outputs": [],
    "source": [
     "# Import some gridded forecasts and one gridded analysis to use in trying mse\n",
-    "forecast = xarray.open_dataset(\"forecast_grid.nc\")\n",
-    "analysis = xarray.open_dataset(\"analysis_grid.nc\")"
+    "forecast = xarray.open_dataset('forecast_grid.nc')\n",
+    "analysis = xarray.open_dataset('analysis_grid.nc')"
    ]
   },
   {
@@ -91,7 +91,7 @@
    "outputs": [],
    "source": [
     "# Use mae to calculate Mean Absolute Difference of Predictions compared to first time step\n",
-    "fcst_diff = mae(forecast.temp_scrn, forecast.temp_scrn[0], reduce_dims=\"time\")\n",
+    "fcst_diff = mae(forecast.temp_scrn,forecast.temp_scrn[0], reduce_dims='time')\n",
     "fcst_diff.name = \"Mean Forecast Change\"\n",
     "fcst_diff = fcst_diff.assign_attrs(units=\"Celsius\")"
    ]
@@ -128,8 +128,8 @@
    "source": [
     "# Figure One - Mean Absolute Difference of Predictions compared to first time step\n",
     "fcst_diff.plot()\n",
-    "plt.suptitle(\"Mean absolute difference predicted over 10 days\")\n",
-    "plt.title(\"Surface Temperature\")"
+    "plt.suptitle('Mean absolute difference predicted over 10 days')\n",
+    "plt.title('Surface Temperature')"
    ]
   },
   {
@@ -215,7 +215,7 @@
     }
    ],
    "source": [
-    "print(forecast.time[24 * 4 - 1].values)"
+    "print(forecast.time[24*4-1].values)"
    ]
   },
   {
@@ -649,7 +649,7 @@
    ],
    "source": [
     "# Extract the forecast of interest\n",
-    "forecast_of_interest = forecast.temp_scrn[24 * 4 - 1]\n",
+    "forecast_of_interest = forecast.temp_scrn[24*4-1]\n",
     "forecast_of_interest"
    ]
   },
@@ -692,7 +692,7 @@
    ],
    "source": [
     "forecast_of_interest.plot(vmin=200, vmax=320)\n",
-    "plt.title(\"Forecast at 00Z 24-11-2022\")"
+    "plt.title('Forecast at 00Z 24-11-2022')"
    ]
   },
   {
@@ -716,7 +716,7 @@
    ],
    "source": [
     "analysis.temp_scrn.plot(vmin=200, vmax=320)\n",
-    "plt.title(\"Analysis at 00Z 24-11-2022\")"
+    "plt.title('Analysis at 00Z 24-11-2022')"
    ]
   },
   {
@@ -767,12 +767,12 @@
    },
    "outputs": [],
    "source": [
-    "mae_by_longitude = mae(forecast_of_interest, analysis.temp_scrn, reduce_dims=\"lat\")\n",
+    "mae_by_longitude = mae(forecast_of_interest, analysis.temp_scrn, reduce_dims='lat')\n",
     "mae_by_longitude.name = \"MAE\"\n",
     "mae_by_longitude = mae_by_longitude.assign_attrs(units=\"Celsius\")\n",
     "\n",
     "mae_by_longitude.plot()\n",
-    "plt.title(\"MAE\")"
+    "plt.title('MAE')"
    ]
   },
   {
@@ -792,12 +792,12 @@
    },
    "outputs": [],
    "source": [
-    "mae_by_latitude = mae(forecast_of_interest, analysis.temp_scrn, preserve_dims=\"lat\")\n",
+    "mae_by_latitude = mae(forecast_of_interest, analysis.temp_scrn, preserve_dims='lat')\n",
     "mae_by_latitude.name = \"MAE\"\n",
     "mae_by_latitude = mae_by_latitude.assign_attrs(units=\"Celsius\")\n",
     "\n",
     "mae_by_latitude.plot()\n",
-    "plt.title(\"MAE\")"
+    "plt.title('MAE')"
    ]
   },
   {
