--- a/tutorials/Mean_Squared_Error.ipynb
+++ b/tutorials/Mean_Squared_Error.ipynb
@@ -73,8 +73,8 @@
    "outputs": [],
    "source": [
     "# Import the same gridded forecasts and one gridded analysis used in the MSE tutorial\n",
-    "forecast = xarray.open_dataset(\"forecast_grid.nc\")\n",
-    "analysis = xarray.open_dataset(\"analysis_grid.nc\")"
+    "forecast = xarray.open_dataset('forecast_grid.nc')\n",
+    "analysis = xarray.open_dataset('analysis_grid.nc')"
    ]
   },
   {
@@ -100,8 +100,8 @@
    "outputs": [],
    "source": [
     "# Calculate the mean differences using mae and mse\n",
-    "meanAbsoluteDifference = mae(forecast.temp_scrn, forecast.temp_scrn[0], reduce_dims=\"time\")\n",
-    "meanSquaredDifference = mse(forecast.temp_scrn, forecast.temp_scrn[0], reduce_dims=\"time\")"
+    "meanAbsoluteDifference = mae(forecast.temp_scrn,forecast.temp_scrn[0], reduce_dims='time') \n",
+    "meanSquaredDifference = mse(forecast.temp_scrn,forecast.temp_scrn[0], reduce_dims='time') "
    ]
   },
   {
@@ -136,8 +136,8 @@
    "source": [
     "# Figure One - Mean Absolute Difference of Predictions compared to first time step\n",
     "meanAbsoluteDifference.plot()\n",
-    "plt.suptitle(\"Mean absolute difference predicted over 10 days\")\n",
-    "plt.title(\"Surface Temperature\")"
+    "plt.suptitle('Mean absolute difference predicted over 10 days')\n",
+    "plt.title('Surface Temperature')"
    ]
   },
   {
@@ -172,8 +172,8 @@
    "source": [
     "# Figure Two - Mean Squared Difference of Predictions compared to first time step\n",
     "meanSquaredDifference.plot()\n",
-    "plt.suptitle(\"Mean squared difference predicted over 10 days\")\n",
-    "plt.title(\"Surface Temperature\")"
+    "plt.suptitle('Mean squared difference predicted over 10 days')\n",
+    "plt.title('Surface Temperature')"
    ]
   },
   {
@@ -199,7 +199,7 @@
    "outputs": [],
    "source": [
     "# Extract the forecast of interest, to compare to analysis.temp_scrn\n",
-    "forecast_of_interest = forecast.temp_scrn[24 * 4 - 1]"
+    "forecast_of_interest = forecast.temp_scrn[24*4-1]"
    ]
   },
   {
@@ -231,8 +231,8 @@
    ],
    "source": [
     "# Recall that MAE and MSE have different units.\n",
-    "print(\"MAE: \", mae_overall.values.round(2))\n",
-    "print(\"MSE: \", mse_overall.values.round(2))"
+    "print('MAE: ', mae_overall.values.round(2))\n",
+    "print('MSE: ', mse_overall.values.round(2))"
    ]
   },
   {
@@ -266,14 +266,14 @@
    ],
    "source": [
     "# Figure 3 - MAE and MSE as a function of longitude\n",
-    "mae_by_longitude = mae(forecast_of_interest, analysis.temp_scrn, preserve_dims=\"lon\")\n",
-    "mse_by_longitude = mse(forecast_of_interest, analysis.temp_scrn, preserve_dims=\"lon\")\n",
+    "mae_by_longitude = mae(forecast_of_interest, analysis.temp_scrn, preserve_dims='lon')\n",
+    "mse_by_longitude = mse(forecast_of_interest, analysis.temp_scrn,preserve_dims='lon')\n",
     "\n",
     "# Prepare some labelling for the graph\n",
     "mae_by_longitude.name = \"Mean Error\"\n",
     "mse_by_longitude.name = \"Mean Error\"\n",
-    "names = pandas.Index([\"MAE (C)\", \"MSE (C^2)\"], name=\"Method\")\n",
-    "xarray.concat([mae_by_longitude, mse_by_longitude], dim=names).plot(col=\"Method\")"
+    "names = pandas.Index(['MAE (C)', 'MSE (C^2)'], name=\"Method\")\n",
+    "xarray.concat([mae_by_longitude, mse_by_longitude], dim=names).plot(col='Method')"
    ]
   },
   {
@@ -307,14 +307,14 @@
    ],
    "source": [
     "# Figure 4 - MAE and MSE as a function of latitude\n",
-    "mae_by_latitude = mae(forecast_of_interest, analysis.temp_scrn, reduce_dims=\"lon\")\n",
-    "mse_by_latitude = mse(forecast_of_interest, analysis.temp_scrn, reduce_dims=\"lon\")\n",
+    "mae_by_latitude = mae(forecast_of_interest, analysis.temp_scrn, reduce_dims='lon')\n",
+    "mse_by_latitude = mse(forecast_of_interest, analysis.temp_scrn, reduce_dims='lon')\n",
     "\n",
     "# Prepare some labelling for the graph\n",
     "mae_by_latitude.name = \"Mean Error\"\n",
     "mse_by_latitude.name = \"Mean Error\"\n",
     "\n",
-    "xarray.concat([mae_by_latitude, mse_by_latitude], dim=names).plot(col=\"Method\")"
+    "xarray.concat([mae_by_latitude, mse_by_latitude], dim=names).plot(col='Method')"
    ]
   },
   {
