--- a/tutorials/Pearsons_Correlation.ipynb
+++ b/tutorials/Pearsons_Correlation.ipynb
@@ -49,7 +49,9 @@
    "source": [
     "obs = 10 * np.random.random((50, 50))\n",
     "obs = xr.DataArray(\n",
-    "    data=obs, dims=[\"time\", \"x\"], coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-02-19\"), \"x\": np.arange(0, 50)}\n",
+    "    data=obs, \n",
+    "    dims=[\"time\", \"x\"],\n",
+    "    coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-02-19\"), \"x\": np.arange(0, 50)}\n",
     ")\n",
     "\n",
     "# Create forecasts\n",
@@ -57,7 +59,9 @@
     "\n",
     "fcst2 = 4.5 + np.random.random((50, 50))\n",
     "fcst2 = xr.DataArray(\n",
-    "    data=fcst2, dims=[\"time\", \"x\"], coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-02-19\"), \"x\": np.arange(0, 50)}\n",
+    "    data=fcst2, \n",
+    "    dims=[\"time\", \"x\"],\n",
+    "    coords={\"time\": pd.date_range(\"2023-01-01\", \"2023-02-19\"), \"x\": np.arange(0, 50)}\n",
     ")"
    ]
   },
@@ -290,7 +294,7 @@
     }
    ],
    "source": [
-    "# Let's calculate the correlation of each forecast system\n",
+    "#Let's calculate the correlation of each forecast system\n",
     "corr1 = correlation(fcst1, obs).item()\n",
     "corr2 = correlation(fcst2, obs).item()\n",
     "print(f\"The correlation between forecast system 1 and the observations = {corr1:.2f}\")\n",
