--- a/tutorials/ROC.ipynb
+++ b/tutorials/ROC.ipynb
@@ -1323,14 +1323,14 @@
     }
    ],
    "source": [
-    "plt.title(\"Receiver Operating Characteristic\")\n",
-    "plt.plot(roc.POFD, roc.POD, \"b\", label=\"AUC = %0.2f\" % roc.AUC.item())\n",
-    "plt.legend(loc=\"lower right\")\n",
-    "plt.plot([0, 1], [0, 1], \"--\")\n",
+    "plt.title('Receiver Operating Characteristic')\n",
+    "plt.plot(roc.POFD, roc.POD, 'b', label = 'AUC = %0.2f' % roc.AUC.item())\n",
+    "plt.legend(loc = 'lower right')\n",
+    "plt.plot([0, 1], [0, 1],'--')\n",
     "plt.xlim([0, 1])\n",
     "plt.ylim([0, 1])\n",
-    "plt.ylabel(\"POD\")\n",
-    "plt.xlabel(\"POFD\")\n",
+    "plt.ylabel('POD')\n",
+    "plt.xlabel('POFD')\n",
     "plt.show()"
    ]
   },
