Modify header levels to improve documentation rendering

--- a/tutorials/Mean_Absolute_Error.ipynb
+++ b/tutorials/Mean_Absolute_Error.ipynb
@@ -75,7 +75,7 @@
    "id": "2093d8d4-d05e-4c9e-9d52-c64112f10a4b",
    "metadata": {},
    "source": [
-    "# Spatial Structure of Change\n",
+    "## Spatial Structure of Change\n",
     "Exploring the example forecast you will see it provides 240 predictions, being every hour for 10 days. We will start by doing something a little surprising - which is using mae to compute the mean absolute difference of the forecasts (at all lead times) compared to the first predicted hour. While this says nothing about forecast accuracy, it does allow us to visualise which parts of the globe change more than others through the period.\n",
     "\n",
     "This answers the question \"over the next ten days, which parts of the earth are likely to experience the greatest changes in temperature on average\".\n",
@@ -137,7 +137,7 @@
    "id": "e4f7d378-c65d-444c-ad96-61d03cb987b7",
    "metadata": {},
    "source": [
-    "# Matching the Forecast Lead Time and to Observations\n",
+    "## Matching the Forecast Lead Time and to Observations\n",
     "\n",
     "To check whether a forecast is accurate, we need to match it to the observations (here taken as an analysis grid - an explanation of which is out of scope for this tutorial) to see how things turned out. We want to compare the analysis to the forecast valid at the time of the analysis. To do this, we need to introduce a few concepts about how a forecast model works. \n",
     "\n",
@@ -821,7 +821,7 @@
    "id": "26d6ed56-594d-4827-af78-425465834163",
    "metadata": {},
    "source": [
-    "**Things to try next**\n",
+    "## Things to try next\n",
     "\n",
     "Explore the `weights` option within mae. The tutorial Weighting_Results might assist with this.\n",
     "\n",
@@ -834,6 +834,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e6f4aa40-ad00-4355-b49c-df5a1957068b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1c0877aa-78ce-44ee-8b29-669780ff03d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -855,7 +863,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
