Change header levels in notebook to improve documentation rendering

--- a/tutorials/Root_Mean_Squared_Error.ipynb
+++ b/tutorials/Root_Mean_Squared_Error.ipynb
@@ -39,7 +39,7 @@
    "id": "97bd58bb-8fef-4000-abdb-5fc7ffc7c654",
    "metadata": {},
    "source": [
-    "# Use RMSE to Focus on Large Anomalies, with units matching the forecast\n",
+    "## Use RMSE to Focus on Large Anomalies, with units matching the forecast\n",
     "\n",
     "While using Mean Squared Error focuses the attention on large errors, the result ceases to be a 'representative' error. Using RMSE gives us the same units as the forecasts and observations, and with a magnitude more comparable to MAE. \n",
     "\n",
@@ -82,7 +82,7 @@
    "id": "2093d8d4-d05e-4c9e-9d52-c64112f10a4b",
    "metadata": {},
    "source": [
-    "# Spatial Structure of Change\n",
+    "## Spatial Structure of Change\n",
     "Similarly to the MAE tutorial, we will compute the squareroot of the mean square difference of the forecasts (at all 240 lead times) compared to the first predicted hour. Again, while this says nothing about forecast accuracy, it allows us to visualise which parts of the globe change more than others through the period. Using RMSE instead of MAE really focuses the attention on the largest differences.\n",
     "\n",
     "In Figure 1 we plot both the mean absolute difference (calculated using mae) and the root mean squared difference (calculated using rmse). \n",
@@ -146,7 +146,7 @@
    "id": "e4f7d378-c65d-444c-ad96-61d03cb987b7",
    "metadata": {},
    "source": [
-    "# Some Verification\n",
+    "## Some Verification\n",
     "As with the MAE tutorial, the forecast time step 24*4 - 1 has the same validity as the analysis, both being 00UTC on 24 November 2022.\n",
     "\n",
     "If you want more information about matching the forecast time step to the observation time step, see the tutorial on Mean Absolute Error.\n",
@@ -261,7 +261,7 @@
    "id": "d54abe61-3005-4b19-8a81-18d8d1449d36",
    "metadata": {},
    "source": [
-    "**Things to try next**\n",
+    "## Things to try next\n",
     "\n",
     "Read the help notes for rmse. \n",
     "\n",
@@ -297,7 +297,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
