--- a/tutorials/Mean_Squared_Error.ipynb
+++ b/tutorials/Mean_Squared_Error.ipynb
@@ -38,7 +38,7 @@
    "id": "d25b9cda-f628-42f8-acce-1523d6df345c",
    "metadata": {},
    "source": [
-    "# Use MSE to Focus on Large Anomalies; Don't Sweat the Small Stuff\n",
+    "## Use MSE to Focus on Large Anomalies; Don't Sweat the Small Stuff\n",
     "MSE is sensitive to large errors.\n",
     "\n",
     "MSE is a fair measure of error if you are forecasting the mean value. Minimising the MSE can be used as a training or objective function for machine learning to obtain a forecast that is the mean of a full probabilistic forecast.\n",
@@ -82,7 +82,7 @@
    "id": "2093d8d4-d05e-4c9e-9d52-c64112f10a4b",
    "metadata": {},
    "source": [
-    "# Spatial Structure of Change\n",
+    "## Spatial Structure of Change\n",
     "Similarly to the MAE tutorial, we will compute the mean square difference of the forecasts (at all 240 lead times) compared to the first predicted hour. While this says nothing about forecast accuracy, it does allow us to visualise which parts of the globe change more than others through the period. Using MSE instead of MAE really focuses the attention on the largest differences.\n",
     "\n",
     "Here we plot both the mean absolute difference (Figure 1, calculated using mae) and the mean squared difference (Figure 2, calculated using mse). \n",
@@ -181,7 +181,7 @@
    "id": "e4f7d378-c65d-444c-ad96-61d03cb987b7",
    "metadata": {},
    "source": [
-    "# Some Verification\n",
+    "## Some Verification\n",
     "As with the MAE tutorial, the forecast time step 24*4 - 1 has the same validity as the analysis, both being 00UTC on 24 November 2022.\n",
     "\n",
     "If you want more information about matching the forecast time step to the observation time step, see the tutorial on Mean Absolute Error.\n",
@@ -330,7 +330,7 @@
    "id": "013ab250-a234-4035-901c-f25268c87ed2",
    "metadata": {},
    "source": [
-    "**Things to try next**\n",
+    "## Things to try next\n",
     "\n",
     "Explore the `weights` option within mse. The tutorial Weighting_Results might assist with this.\n",
     "\n",
@@ -364,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
