--- a/tutorials/Brier_Score.ipynb
+++ b/tutorials/Brier_Score.ipynb
@@ -91,7 +91,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notes\n",
+    "## Notes\n",
     "- If you are using the Brier score on large data with Dask, consider setting `check_args` arg to `False` in `brier_score`. \n",
     "- In the future, the Brier score components calculation will be added.\n",
     "- You may be interested in working through the Murphy Diagram tutorial which allows you to break down the performance of the Brier score based each threshold probability.\n",
