Update Explanation with renamed Binary Contingency notebook

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -58,7 +58,7 @@
     "\n",
     "## Categorical\n",
     "- [FIRM](./FIRM.ipynb)\n",
-    "- [Contingency Scores](./Contingency_Scores.ipynb)\n"
+    "- [Binary Contingency Scores](./Binary_Contingency_Scores.ipynb)\n"
    ]
   },
   {
