Added bias_score as an alias for frequency_bias

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -28,7 +28,7 @@
     "   - allows the data to be aggragated and transformed (for example, reducing the latitude and longitude dimensions while preserving the height dimension in order to assess the accuracy at different vertical levels).\n",
     "3. Calculate the desired metrics from the contingency tables produced in step two. `scores` contains the following binary congtingency scores:\n",
     "   - accuracy\n",
-    "   - frequency bias\n",
+    "   - frequency bias (bias score)\n",
     "   - hit rate (probability of detection)\n",
     "   - false alarm rate (probability of false detection)\n",
     "   - success ratio\n",
