Add a unit test Update listing in notebook

--- a/tutorials/Binary_Contingency_Scores.ipynb
+++ b/tutorials/Binary_Contingency_Scores.ipynb
@@ -29,7 +29,7 @@
     "3. Calculate the desired metrics from the contingency tables produced in step two. `scores` contains the following binary congtingency scores:\n",
     "   - accuracy\n",
     "   - frequency bias (bias score)\n",
-    "   - hit rate (probability of detection)\n",
+    "   - hit rate (probability of detection, sensitivity)\n",
     "   - false alarm rate (probability of false detection)\n",
     "   - success ratio\n",
     "   - threat score (critical success index)\n",
