--- a/tutorials/CRPS_for_CDFs.ipynb
+++ b/tutorials/CRPS_for_CDFs.ipynb
@@ -398,6 +398,14 @@
    "cell_type": "markdown",
    "id": "0777b773",
    "metadata": {},
+   "source": [
+    "Note that there are several tools in `scores` to help with pre-processing CDF data available in `scores.processing.cdf`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d007ff04",
+   "metadata": {},
    "source": []
   }
  ],
@@ -417,7 +425,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
