--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -73,7 +73,7 @@
     "## Probability\n",
     "\n",
     "- [Brier Score](./Brier_Score.ipynb)\n",
-    "- [CRPS Part 1, for forecasts expressed as chance of not exceeding](./Continuous_Ranked_Probability_Score.ipynb)\n",
+    "- [CRPS Part 1, for forecasts expressed as CDFs](./CRPS_for_CDFs.ipynb)\n",
     "- [CRPS Part 2, for ensemble forecasts](./CRPS_for_Ensembles.ipynb)\n",
     "- [Reciever Operating Characteristic](./ROC.ipynb)\n"
    ]
