make isotonic regression available in the probability and continuous api as well

--- a/tutorials/Explanation.ipynb
+++ b/tutorials/Explanation.ipynb
@@ -98,7 +98,7 @@
    "metadata": {},
    "source": [
     "## Processing\n",
-    "- [Isotonic Regression](./Isotonic_Regression.ipynb)"
+    "- [Isotonic Regression and Reliability Diagrams](./Isotonic_Regression_And_Reliability_Diagrams.ipynb)"
    ]
   },
   {
