added DOIs and updated jive reference

--- a/docs/paper.bib
+++ b/docs/paper.bib
@@ -44,6 +44,7 @@
 	pages        = {505--562},
 	issn         = {13697412, 14679868},
 	url          = {http://www.jstor.org/stable/24775351},
+	doi        = {10.1111/rssb.12154},
 	urldate      = {2023-09-06},
 	abstract     = {In the practice of point prediction, it is desirable that forecasters receive a directive in the form of a statistical functional. For example, forecasters might be asked to report the mean or a quantile of their predictive distributions. When evaluating and comparing competing forecasts, it is then critical that the scoring function used for these purposes be consistent for the functional at hand, in the sense that the expected score is minimized when following the directive. We show that any scoring function that is consistent for a quantile or an expectile functional can be represented as a mixture of elementary or extremal scoring functions that form a linearly parameterized family. Scoring functions for the mean value and probability forecasts of binary events constitute important examples. The extremal scoring functions admit appealing economic interpretations of quantiles and expectiles in the context of betting and investment problems. The Choquet-type mixture representations give rise to simple checks of whether a forecast dominates another in the sense that it is preferable under any consistent scoring function. In empirical settings it suffices to compare the average scores for only a finite number of extremal elements. Plots of the average scores with respect to the extremal scoring functions, which we call Murphy diagrams, permit detailed comparisons of the relative merits of competing forecasts.}
 }
@@ -72,6 +73,7 @@
 	pages        = {414--425},
 	issn         = {00401706},
 	url          = {http://www.jstor.org/stable/41714954},
+	doi          = {10.1198/tech.2011.10136},
 	urldate      = {2023-09-06},
 	abstract     = {Under a general loss function, we develop a hypothesis test to determine whether a significant difference in the spatial predictions produced by two competing models exists on average across the entire spatial domain of interest. The null hypothesis is that of no difference, and a spatial loss differential is created based on the observed data, the two sets of predictions, and the loss function chosen by the researcher. The test assumes only isotropy and short-range spatial dependence of the loss differential but does allow it to be non-Gaussian, non-zero-mean, and spatially correlated. Constant and nonconstant spatial trends in the loss differential are treated in two separate cases. Monte Carlo simulations illustrate the size and power properties of this test, and an example based on daily average wind speeds in Oklahoma is used for illustration. Supplemental results are available online.}
 }
@@ -107,6 +109,7 @@
 	number		 = {3},
 	pages		 = {253--263},
 	year		 = {1995},
+	doi          = {10.3386/t0169}
 }
 @Article{Brown:2021,
 	title	     = {The Model Evaluation Tools (MET): More than a decade of community-supported forecast verification},
@@ -115,23 +118,25 @@
 	volume       = {102},
 	number       = {4},
 	pages        = {E782--E807},
-	year         = {2021}
+	year         = {2021},
+	doi          = {10.1175/bams-d-19-0093.1}
 }
-@inproceedings{Loveday:2023,
-	author 		 = {Loveday, Nicholas and Taggart, Robert and Templeton, Jez and Carroll, Maree and Ebert, Elizabeth and Pagano, Thomas and Cheng, George and Plastow, Kevin and Khanarmuei, Mohammadreza and Griffiths, Deryn and Richter, Harald and Leeuwenburg, Tennessee and Wickramasinghe, Daria and McKelvie, Alistair and Foley, Michael and Price, Benjamin},
-	year 		 = {2023},
-	month 		 = {01},
-	pages 		 = {},
-	title 		 = {Impact of the Jive verification system at the Australian Bureau of Meteorology},
-	organization = {AMS},
-	booktitle	 = {103rd American Meteorological Society Annual Meeting},
-	note 	     = {\url{https://ams.confex.com/ams/103ANNUAL/meetingapp.cgi/Paper/416552}},
+@Article{loveday2024jive,
+	title={The Jive Verification System and its Transformative Impact on Weather Forecasting Operations}, 
+	author={Nicholas Loveday and Deryn Griffiths and Tennessee Leeuwenburg and Robert Taggart and Thomas C. Pagano and George Cheng and Kevin Plastow and Elizabeth Ebert and Cassandra Templeton and Maree Carroll and Mohammadreza Khanarmuei and Isha Nagpal},
+	year={2024},
+	eprint={2404.18429},
+	archivePrefix={arXiv},
+	primaryClass={physics.ao-ph},
+	doi={10.48550/arXiv.2404.18429}
 }
 @book{Griffiths:2017,
 	title	     = {Advice for automation of forecasts: a framework},
 	author		 = {Griffiths, Deryn and Jack, Harry and Foley, Michael and Ioannou, Ioanna and Liu, Maoyuan},
 	year		 = {2017},
-	publisher	 = {Bureau of Meteorology}
+	publisher	 = {Bureau of Meteorology},
+	url          = {http://www.bom.gov.au/research/publications/researchreports/BRR-021.pdf},
+	doi          = {10.22499/4.0021}
 }
 @Article{Foley:2020,
 	title	 	 = {Comparison of Single-Valued Forecasts in a User-Oriented Framework},
@@ -141,7 +146,8 @@
 	number		 = {3},
 	pages		 = {1067--1080},
 	year		 = {2020},
-	publisher	 = {American Meteorological Society}
+	publisher	 = {American Meteorological Society},
+	doi          = {10.1175/waf-d-19-0248.1}
 }
 @Article{Taggart:2022b,
 	title	 	 = {Evaluation of point forecasts for extreme events using consistent scoring functions},
@@ -151,7 +157,8 @@
 	number		 = {742},
 	pages		 = {306--320},
 	year		 = {2022},
-	publisher	 = {Wiley Online Library}
+	publisher	 = {Wiley Online Library},
+	doi          = {10.1002/qj.4206}
 }
 @Article{Taggart:2022c,
 	title		 = {Point forecasting and forecast evaluation with generalized Huber loss},
@@ -161,7 +168,8 @@
 	number		 = {1},
 	pages		 = {201--231},
 	year		 = {2022},
-	publisher	 = {The Institute of Mathematical Statistics and the Bernoulli Society}
+	publisher	 = {The Institute of Mathematical Statistics and the Bernoulli Society},
+	doi          = {10.1214/21-ejs1957}
 }
 @Article{Gneiting:2011,
 	title		 = {Comparing density forecasts using threshold-and quantile-weighted scoring rules},
@@ -171,7 +179,8 @@
 	number		 = {3},
 	pages		 = {411--422},
 	year		 = {2011},
-	publisher	 = {Taylor & Francis}
+	publisher	 = {Taylor & Francis},
+	doi          = {10.1198/jbes.2010.08110}
 }
 @misc{Taggart:2022d,   
     title    	 = {Assessing calibration when predictive distributions have discontinuities.},   
@@ -196,7 +205,8 @@
   number={9},
   pages={E1610--E1618},
   year={2023},
-  publisher={American Meteorological Society}
+  publisher={American Meteorological Society},
+  doi={10.1175/bams-d-22-0253.1}
 }
 @article{dimitriadis2021stable,
   title={Stable reliability diagrams for probabilistic classifiers},
@@ -206,7 +216,8 @@
   number={8},
   pages={e2016191118},
   year={2021},
-  publisher={National Acad Sciences}
+  publisher={National Acad Sciences},
+  doi={10.1073/pnas.2016191118}
 }
 @article{griffiths2021circular,
   title={Circular Flip-Flop Index: quantifying revision stability of forecasts of direction},
@@ -216,5 +227,6 @@
   number={3},
   pages={266--271},
   year={2021},
-  publisher={CSIRO Publishing}
+  publisher={CSIRO Publishing},
+  doi={10.1071/es21010}
 }
